Bug 18149 - zero-sized cause build fail on Solaris
Summary: zero-sized cause build fail on Solaris
Status: RESOLVED FIXED
Alias: None
Product: ConsoleKit
Classification: Unclassified
Component: Daemon (show other bugs)
Version: unspecified
Hardware: All Solaris
: high critical
Assignee: william.jon.mccann
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-21 04:33 UTC by Halton Huo
Modified: 2009-02-11 17:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch for bug #18149 (462 bytes, patch)
2008-10-21 04:34 UTC, Halton Huo
Details | Splinter Review

Description Halton Huo 2008-10-21 04:33:33 UTC
I'm building ConsoleKit 0.3.0 tarball release and trunk code under OpenSolaris with sun cc, will fails on following error:

 /ws/onnv-tools-prc/SUNWspro/SS12/bin/cc -DHAVE_CONFIG_H -I. -I.. -I. -I. -D_REENTRANT -D_PTHREADS -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -DPREFIX=\"/usr\" -DBINDIR=\"/usr/bin\" -DLIBDIR=\"/usr/lib\" -DLIBEXECDIR=\"/usr/libexec\" -DDATADIR=\"/usr/share\" -DSYSCONFDIR=\"/usr/etc\" -DLOCALSTATEDIR=\"/usr/var\" -DCONSOLE_KIT_PID_FILE=\"/usr/var/run/ConsoleKit/pid\" -DG_ENABLE_DEBUG -DDBUS_VERSION_MAJOR=1 -DDBUS_VERSION_MINOR=2 -DDBUS_VERSION_MICRO=3 -g -c ck-log-event.c  -KPIC -DPIC -o .libs/ck-log-event.o
"ck-log-event.h", line 48: zero-sized struct/union
"ck-log-event.h", line 52: zero-sized struct/union
"ck-log-event.h", line 56: zero-sized struct/union
"ck-log-event.h", line 60: zero-sized struct/union
cc: acomp failed for ck-log-event.c
Comment 1 Halton Huo 2008-10-21 04:34:08 UTC
Created attachment 19782 [details] [review]
patch for bug #18149
Comment 2 william.jon.mccann 2009-02-11 17:32:17 UTC
Sorry for the slow response.  I've fixed this in master now.  Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.