fix zero-sized struct/union

https://bugs.freedesktop.org/show_bug.cgi?id=18149